--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "apollo-pythian",
   "version": "1.0.0",
   "description": "Spec compliant and shareable error repository for Apollo Client/Server",
-  "main": "index.js",
+  "main": "./lib/index.js",
+  "bin": "./lib/cli.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --opts mocha.opts",
+    "build": "rm -rf lib && tsc"
   },
   "repository": {
     "type": "git",
@@ -22,5 +24,25 @@
   "bugs": {
     "url": "https://github.com/theGlenn/apollo-pythian/issues"
   },
-  "homepage": "https://github.com/theGlenn/apollo-pythian#readme"
+  "homepage": "https://github.com/theGlenn/apollo-pythian#readme",
+  "dependencies": {
+    "@types/graphql": "^0.13.1",
+    "apollo-server": "^2.0.0-beta.3",
+    "graphql": "^0.13.2",
+    "jsonfile": "^4.0.0",
+    "minimist": "^1.2.0"
+  },
+  "devDependencies": {
+    "@types/jsonfile": "^4.0.1",
+    "@types/minimist": "^1.2.0",
+    "@types/node": "^10.3.0",
+    "@types/chai": "^4.1.3",
+    "@types/mocha": "^5.2.0",
+    "chai": "^4.1.2",
+    "ts-node": "6.0.2",
+    "typescript": "2.8.3"
+  },
+  "resolutions": {
+    "**@types/mocha": "^5.2.0"
+  }
 }
