--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "bin": "./lib/cli.js",
   "scripts": {
     "test": "mocha --opts mocha.opts",
-    "build": "rm -rf lib && tsc"
+    "build": "rm -rf lib && tsc",
+    "cli": "ts-node src/cli.ts"
   },
   "repository": {
     "type": "git",
