--- a/package.json
+++ b/package.json
@@ -31,15 +31,18 @@
     "apollo-server": "^2.0.0-beta.3",
     "graphql": "^0.13.2",
     "jsonfile": "^4.0.0",
-    "minimist": "^1.2.0"
+    "minimist": "^1.2.0",
+    "mkdirp": "^0.5.1",
+    "rimraf": "^2.6.2"
   },
   "devDependencies": {
+    "@types/chai": "^4.1.3",
     "@types/jsonfile": "^4.0.1",
     "@types/minimist": "^1.2.0",
-    "@types/node": "^10.3.0",
-    "@types/chai": "^4.1.3",
     "@types/mocha": "^5.2.0",
+    "@types/node": "^10.3.0",
     "chai": "^4.1.2",
+    "chai-fs": "^2.0.0",
     "ts-node": "6.0.2",
     "typescript": "2.8.3"
   },
