--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "homepage": "https://github.com/theGlenn/apollo-pythian#readme",
   "dependencies": {
     "@types/graphql": "^0.13.1",
-    "apollo-server": "^2.0.0-beta.3",
+    "apollo-server": "^2.0.0-beta.5",
     "graphql": "^0.13.2",
     "jsonfile": "^4.0.0",
     "minimist": "^1.2.0",
@@ -40,16 +40,18 @@
   },
   "devDependencies": {
     "@types/chai": "^4.1.3",
+    "@types/express": "^4.16.0",
     "@types/jsonfile": "^4.0.1",
     "@types/minimist": "^1.2.0",
     "@types/mocha": "^5.2.0",
     "@types/node": "^10.3.0",
     "chai": "^4.1.2",
     "chai-fs": "^2.0.0",
-    "ts-node": "6.0.2",
-    "typescript": "2.8.3"
+    "ts-node": "6.1.0",
+    "typescript": "2.9.1"
   },
   "resolutions": {
-    "**@types/mocha": "^5.2.0"
+    "**@types/mocha": "^5.2.0",
+    "**@types/express": "^4.16.3"
   }
 }
