--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/node": "^10.3.0",
     "chai": "^4.1.2",
     "chai-fs": "^2.0.0",
+    "mocha": "^5.2.0",
     "ts-node": "6.1.0",
     "typescript": "2.9.1"
   },
