--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
-  "name": "apollo-pythian",
+  "name": "apollo-prophecy",
   "version": "0.1.0",
   "description": "Generate Spec compliant and shareable errors for Apollo Client/Server from JSON or Graphql Schema",
   "main": "./lib/index.js",
   "bin": "./lib/cli.js",
   "scripts": {
     "test": "mocha --opts mocha.opts",
-    "build": "rm -rf lib && tsc"
+    "build": "rm -rf lib && tsc",
+    "cli": "ts-node src/cli.ts",
+    "preversion": "npm test",
+    "version": "npm run build && git add -A lib",
+    "postversion": "git push && git push --tags && rm -rf lib",
+    "patch-release": "npm version patch && npm publish && git push --follow-tags"
   },
   "repository": {
     "type": "git",
@@ -27,22 +32,28 @@
   "homepage": "https://github.com/theGlenn/apollo-pythian#readme",
   "dependencies": {
     "@types/graphql": "^0.13.1",
-    "apollo-server": "^2.0.0-beta.3",
+    "apollo-server": "^2.0.0-beta.5",
     "graphql": "^0.13.2",
     "jsonfile": "^4.0.0",
-    "minimist": "^1.2.0"
+    "minimist": "^1.2.0",
+    "mkdirp": "^0.5.1",
+    "rimraf": "^2.6.2"
   },
   "devDependencies": {
+    "@types/chai": "^4.1.3",
+    "@types/express": "^4.16.0",
     "@types/jsonfile": "^4.0.1",
     "@types/minimist": "^1.2.0",
-    "@types/node": "^10.3.0",
-    "@types/chai": "^4.1.3",
     "@types/mocha": "^5.2.0",
+    "@types/node": "^10.3.0",
     "chai": "^4.1.2",
-    "ts-node": "6.0.2",
-    "typescript": "2.8.3"
+    "chai-fs": "^2.0.0",
+    "mocha": "^5.2.0",
+    "ts-node": "6.1.0",
+    "typescript": "2.9.1"
   },
   "resolutions": {
-    "**@types/mocha": "^5.2.0"
+    "**@types/mocha": "^5.2.0",
+    "**@types/express": "^4.16.3"
   }
 }
