--- a/package.json
+++ b/package.json
@@ -31,17 +31,21 @@
   },
   "homepage": "https://github.com/theGlenn/apollo-pythian#readme",
   "dependencies": {
+    "apollo-link": "^1.2.2",
+    "apollo-link-http": "^1.5.4",
     "apollo-server": "^2.0.0-beta.5",
     "graphql": "^0.13.2",
+    "graphql-tag": "^2.9.2",
     "jsonfile": "^4.0.0",
     "minimist": "^1.2.0",
     "mkdirp": "^0.5.1",
+    "node-fetch": "^2.1.2",
     "rimraf": "^2.6.2"
   },
   "devDependencies": {
-    "@types/graphql": "^0.13.1",
     "@types/chai": "^4.1.3",
     "@types/express": "^4.16.0",
+    "@types/graphql": "^0.13.1",
     "@types/jsonfile": "^4.0.1",
     "@types/minimist": "^1.2.0",
     "@types/mocha": "^5.2.0",
