--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "./lib/index.js",
   "bin": "./lib/cli.js",
   "scripts": {
-    "test": "mocha --opts mocha.opts",
+    "test": "nyc mocha --opts mocha.opts",
+    "coverage": "nyc report --reporter=html && open ./coverage/index.html",
     "build": "rm -rf lib && tsc",
     "cli": "ts-node src/cli.ts",
     "preversion": "npm test",
@@ -52,12 +53,29 @@
     "@types/node": "^10.3.0",
     "chai": "^4.1.2",
     "chai-fs": "^2.0.0",
+    "coveralls": "^3.0.1",
     "mocha": "^5.2.0",
+    "nyc": "^12.0.2",
+    "source-map-support": "^0.5.6",
     "ts-node": "6.1.0",
     "typescript": "2.9.1"
   },
   "resolutions": {
     "**@types/mocha": "^5.2.0",
     "**@types/express": "^4.16.3"
+  },
+  "nyc": {
+    "extension": [
+      ".ts",
+      ".tsx"
+    ],
+    "exclude": [
+      "lib",
+      "**/*.d.ts"
+    ],
+    "reporter": [
+      "html"
+    ],
+    "all": true
   }
 }
