--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "./lib/index.js",
   "bin": "./lib/cli.js",
   "scripts": {
-    "test": "mocha --opts mocha.opts",
+    "test": "nyc mocha --opts mocha.opts",
+    "coverage": "nyc report --reporter=html && open ./coverage/index.html",
     "build": "rm -rf lib && tsc",
     "cli": "ts-node src/cli.ts",
     "preversion": "npm test",
@@ -31,29 +32,50 @@
   },
   "homepage": "https://github.com/theGlenn/apollo-pythian#readme",
   "dependencies": {
+    "apollo-link": "^1.2.2",
+    "apollo-link-http": "^1.5.4",
     "apollo-server": "^2.0.0-beta.5",
     "graphql": "^0.13.2",
+    "graphql-tag": "^2.9.2",
     "jsonfile": "^4.0.0",
     "minimist": "^1.2.0",
     "mkdirp": "^0.5.1",
+    "node-fetch": "^2.1.2",
     "rimraf": "^2.6.2"
   },
   "devDependencies": {
-    "@types/graphql": "^0.13.1",
     "@types/chai": "^4.1.3",
     "@types/express": "^4.16.0",
+    "@types/graphql": "^0.13.1",
     "@types/jsonfile": "^4.0.1",
     "@types/minimist": "^1.2.0",
     "@types/mocha": "^5.2.0",
     "@types/node": "^10.3.0",
     "chai": "^4.1.2",
     "chai-fs": "^2.0.0",
+    "coveralls": "^3.0.1",
     "mocha": "^5.2.0",
+    "nyc": "^12.0.2",
+    "source-map-support": "^0.5.6",
     "ts-node": "6.1.0",
     "typescript": "2.9.1"
   },
   "resolutions": {
     "**@types/mocha": "^5.2.0",
     "**@types/express": "^4.16.3"
+  },
+  "nyc": {
+    "extension": [
+      ".ts",
+      ".tsx"
+    ],
+    "exclude": [
+      "lib",
+      "**/*.d.ts"
+    ],
+    "reporter": [
+      "html"
+    ],
+    "all": true
   }
 }
