--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.2",
     "jsonfile": "^4.0.0",
-    "minimist": "^1.2.0",
     "mkdirp": "^0.5.1",
     "node-fetch": "^2.1.2",
     "rimraf": "^2.6.2"
@@ -51,6 +50,7 @@
     "@types/minimist": "^1.2.0",
     "@types/mocha": "^5.2.0",
     "@types/node": "^10.3.0",
+    "@types/yargs": "^11.0.0",
     "chai": "^4.1.2",
     "chai-fs": "^2.0.0",
     "coveralls": "^3.0.1",
