--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "preversion": "npm test",
     "version": "npm run build && git add -A lib",
     "postversion": "git push && git push --tags && rm -rf lib",
-    "patch-release": "npm version patch && npm publish && git push --follow-tags"
+    "patch-release": "npm version patch && npm publish && git push --follow-tags",
+    "prepatch-release": "npm version prepatch && npm publish && git push --follow-tags"
   },
   "repository": {
     "type": "git",
