--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "apollo-prophecy",
-  "version": "0.2.0",
+  "version": "0.2.1-0",
   "description": "Generate Spec compliant and shareable errors for Apollo Client/Server from JSON or Graphql Schema",
   "main": "./lib/index.js",
   "bin": "./lib/cli.js",
