--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "jsonfile": "^4.0.0",
     "mkdirp": "^0.5.1",
     "node-fetch": "^2.1.2",
-    "rimraf": "^2.6.2"
+    "rimraf": "^2.6.2",
+    "yargs": "^11.0.0"
   },
   "devDependencies": {
     "@types/chai": "^4.1.3",
