--- a/package.json
+++ b/package.json
@@ -55,14 +55,18 @@
     "@types/mocha": "^5.2.0",
     "@types/node": "^10.3.0",
     "@types/yargs": "^11.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.5.0",
+    "@typescript-eslint/parser": "^4.5.0",
     "chai": "^4.1.2",
     "chai-fs": "^2.0.0",
     "coveralls": "^3.0.1",
+    "eslint": "^7.12.0",
+    "eslint-config-airbnb-typescript": "^12.0.0",
     "mocha": "^5.2.0",
     "nyc": "^12.0.2",
     "source-map-support": "^0.5.6",
     "ts-node": "6.1.0",
-    "typescript": "2.9.1"
+    "typescript": "^2.9.1"
   },
   "resolutions": {
     "**@types/mocha": "^5.2.0",
