--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "homepage": "https://github.com/theGlenn/apollo-pythian#readme",
   "dependencies": {
+    "@types/rimraf": "^3.0.0",
     "apollo-link": "^1.2.2",
     "apollo-link-http": "^1.5.4",
     "apollo-server": "^2.0.0-beta.5",
@@ -48,10 +49,13 @@
   },
   "devDependencies": {
     "@types/chai": "^4.1.3",
+    "@types/chai-fs": "^2.0.2",
     "@types/express": "^4.16.0",
     "@types/graphql": "^0.13.1",
+    "@types/jest": "^26.0.15",
     "@types/jsonfile": "^4.0.1",
     "@types/minimist": "^1.2.0",
+    "@types/mkdirp": "^1.0.1",
     "@types/mocha": "^5.2.0",
     "@types/node": "^10.3.0",
     "@types/yargs": "^11.0.0",
@@ -62,9 +66,11 @@
     "coveralls": "^3.0.1",
     "eslint": "^7.12.0",
     "eslint-config-airbnb-typescript": "^12.0.0",
+    "jest": "^26.6.1",
     "mocha": "^5.2.0",
     "nyc": "^12.0.2",
     "source-map-support": "^0.5.6",
+    "ts-jest": "^26.4.2",
     "ts-node": "6.1.0",
     "typescript": "^2.9.1"
   },
