--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "@types/chai-fs": "^2.0.2",
     "@types/express": "^4.16.0",
     "@types/graphql": "^0.13.1",
-    "@types/jest": "^26.0.15",
+    "@types/jest": "^24.0.21",
     "@types/jsonfile": "^4.0.1",
     "@types/minimist": "^1.2.0",
     "@types/mkdirp": "^1.0.1",
@@ -65,12 +65,10 @@
     "coveralls": "^3.1.0",
     "eslint": "^7.12.0",
     "eslint-config-airbnb-typescript": "^12.0.0",
-    "jest": "^26.6.1",
-    "mocha": "^5.2.0",
-    "nyc": "^12.0.2",
+    "jest": "^24.9.0",
     "source-map-support": "^0.5.6",
-    "ts-jest": "^26.4.1",
-    "ts-node": "6.1.0",
+    "ts-jest": "^24.1.0",
+    "ts-node": "^8.3.0",
     "typescript": "^3.7.5"
   },
   "resolutions": {
